# simba_decoder

./: CMakeLists.txt  LICENSE
src/: main.cpp
src/decoder/: simba_decoder.cpp  simba_decoder.hpp
src/parts/: incremental_packet_header.cpp  incremental_packet_header.hpp  market_data_packet_header.cpp  market_data_packet_header.hpp  sbe_header.cpp  sbe_header.hpp
src/parts/messages/: order_book_snapshot.cpp  order_book_snapshot.hpp  order_execution.cpp  order_execution.hpp  order_update.cpp  order_update.hpp
src/utility/: details.hpp  types.cpp  types.hpp
